hphp/test/slow/array_iterator/array_key_exists.php.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'ArrayIterator to array cast' in %s/array_key_exists.php:6
Stack trace:
%A
